<resources>
    <string name="app_name">Samagra-Android</string>

    <string name="comments">Comments</string>
    <string name="todos">Todos</string>
    <string name="photos">Photos</string>
    <string name="posts">Posts</string>
    <string name="current_unix_timestamp">Current Unix Timestamp</string>

    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="start_save">Start Save</string>
    <string name="end_save">End Save</string>

    <string name="process_time">%1$s: %2$d</string>

</resources>
