<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_32dp">

                    <TextView
                        android:id="@+id/tvCommentsStart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="Start: 122" />

                    <TextView
                        android:id="@+id/tvCommentsEnd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="End: 122" />

                    <TextView
                        android:id="@+id/tvCommentsStartSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="Start Save: 122" />

                    <TextView
                        android:id="@+id/tvCommentsEndSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="End Save: 122" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_32dp">

                    <TextView
                        android:id="@+id/tvPhotosStart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="Start: 122" />

                    <TextView
                        android:id="@+id/tvPhotosEnd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="End: 122" />

                    <TextView
                        android:id="@+id/tvPhotosStartSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="Start Save: 122" />

                    <TextView
                        android:id="@+id/tvPhotosEndSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="End Save: 122" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_32dp">

                    <TextView
                        android:id="@+id/tvPostsStart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="Start: 122" />

                    <TextView
                        android:id="@+id/tvPostsEnd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="End: 122" />

                    <TextView
                        android:id="@+id/tvPostsStartSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="Start Save: 122" />

                    <TextView
                        android:id="@+id/tvPostsEndSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="End Save: 122" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_32dp">

                    <TextView
                        android:id="@+id/tvTodosStart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="Start: 122" />

                    <TextView
                        android:id="@+id/tvTodosEnd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="End: 122" />

                    <TextView
                        android:id="@+id/tvTodosStartSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="Start Save: 122" />

                    <TextView
                        android:id="@+id/tvTodosEndSave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_12sp"
                        tools:text="End Save: 122" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingBottom="@dimen/padding_16dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_8dp"
                    android:layout_weight="1"
                    android:text="@string/comments"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/photos"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/padding_16dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingBottom="@dimen/padding_16dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnPosts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_8dp"
                    android:layout_weight="1"
                    android:text="@string/posts"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnTodos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/todos"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCurrentTimestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_16dp"
                android:layout_marginEnd="@dimen/padding_16dp"
                android:text="@string/current_unix_timestamp"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
